# Chitty-Workspace

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dev-cert.cer
.chitty/: chitty.md
.claude/: CLAUDE.md  launch.json  settings.local.json
assets/: chat.html
assets/marketplace/chitty/: SKILL.md  package.json
assets/marketplace/chitty/project-scanner/: SKILL.md
assets/marketplace/chitty/web-app-builder/: SKILL.md
assets/marketplace/google-calendar/: SKILL.md  calendar_common.py  package.json
assets/marketplace/google-calendar/calendar-create/: manifest.json  tool.py
assets/marketplace/google-calendar/calendar-list/: manifest.json  tool.py
assets/marketplace/google-cloud/: config.py  package.json
assets/marketplace/google-cloud/bigquery/: manifest.json  tool.py
assets/marketplace/google-cloud/cloud-storage/: manifest.json  tool.py
assets/marketplace/google-gmail/: package.json
assets/marketplace/google-gmail/gmail-read/: tool.py
assets/marketplace/google-gmail/gmail-send/: tool.py
assets/marketplace/slack/: config.py  package.json
assets/marketplace/slack/list-channels/: tool.py
assets/marketplace/slack/read-history/: tool.py
assets/marketplace/slack/reply-thread/: tool.py
assets/marketplace/slack/send-message/: tool.py
assets/marketplace/slack/socket-mode/: connect.py
assets/marketplace/social-media/: SKILL.md  package.json
assets/marketplace/social-media/x-twitter/: manifest.json  tool.py
assets/marketplace/web-tools/: SKILL.md  package.json
assets/marketplace/web-tools/web-scraper/: manifest.json  tool.py
assets/marketplace/web-tools/web-search/: manifest.json  tool.py
docs/: application-feature-list.md  skills-and-artifacts-review.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
installer/: ChittyWorkspaceInstaller.iss  build-msix.ps1  build.ps1  create-dev-cert.ps1  requirements-installer.txt
installer/msix/: AppxManifest.xml
sidecar/: inference_server.py  media_engine.py  requirements-full.txt  requirements.txt  training_engine.py
src/: connections.rs  gpu.rs  huggingface.rs  main.rs  scheduler.rs  server.rs  tls.rs
src/agents/: mod.rs
src/chat/: context.rs  memory.rs  mod.rs
src/config/: mod.rs
src/integrations/: mod.rs
src/media/: google.rs  huggingface.rs  mod.rs  ollama.rs  openai.rs  xai.rs
src/oauth/: mod.rs  providers.rs
src/providers/: cloud.rs  local_sidecar.rs  mod.rs  ollama.rs
src/providers/adaptors/: mod.rs  openai_compat.rs  xai.rs
src/skills/: mod.rs
src/storage/: mod.rs  schema.rs
src/tools/: browser_engine.rs  diagnostic.rs  executor.rs  google.rs  manifest.rs  marketplace_client.rs  media.rs  mod.rs  outline.rs  runtime.rs  web.rs
src/ui/: mod.rs
